cabal-version:       2.0

name:                rrb-trees
version:             0.1.0.0
synopsis:            Efficient immutable vectors.
bug-reports:         http://github.com/ckoparkar/rrb-trees/issues
license:             BSD3
license-file:        LICENSE
author:              Chaitanya Koparkar
maintainer:          ckoparkar@gmail.com
build-type:          Simple
-- extra-source-files:  CHANGELOG.md

library
  -- exposed-modules:
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.11.1.0
  hs-source-dirs:      src
  default-language:    Haskell2010
