cabal-version:       2.0

name:                rrb-vector
version:             0.1.0.0
synopsis:            Efficient immutable vectors.
bug-reports:         http://github.com/ckoparkar/rrb-vector/issues
license:             BSD3
license-file:        LICENSE
author:              Chaitanya Koparkar
maintainer:          ckoparkar@gmail.com
build-type:          Simple
extra-source-files:  README.md

library
  exposed-modules:     Data.RRB.Vector
  ghc-options:         -Wall -fdefer-typed-holes -Wtyped-holes
  build-depends:       base >=4.10 && < 4.13
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test-rrb-vector
  type:                exitcode-stdio-1.0
  build-depends:       base, rrb-vector, tasty, tasty-hunit, tasty-th
  hs-source-dirs:      tests
  main-is:             Main.hs
  default-language:    Haskell2010
